--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -212,7 +212,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>FUNCIONA</h1>
+            <h1>FUNCIONA otra vez</h1>
           </hgroup>
 
 
